--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <a class="nav-link" style="color: black;"  aria-current="page" href="index.html">Search</a>
                     </li>
                     <li class="nav-item ms-auto">
-                        <a class="nav-link" style="color: black;" href="images.html">Image Search</a>
+                        <a class="nav-link" style="color: black;" href="images.html">Image Searches</a>
                     </li>
                     <li class="nav-item ms-auto">
                         <a class="nav-link" style="color: black;" href="advanced.html">Advanced Search</a>
