--- a/image.html
+++ b/image.html
@@ -59,7 +59,7 @@
             </div>
             <div class="d-flex justify-content-center my-3">
                 <button type="submit" form="searchbar" formaction="https://google.com/search" class="btn mx-3"
-                    style="background-color: #f8f9fa;" role="button">Image Search</button>
+                    style="background-color: #f8f9fa;" role="button">Image Searches</button>
                     <button type="submit" form="searchbar" formaction="https://google.com/search" class="btn mx-3"
                     style="background-color: #f8f9fa;" role="button">I'm Feeling Lucky</button>
             </div>
