Add navigation bar

--- a/advanced-search.html
+++ b/advanced-search.html
@@ -10,9 +10,28 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+    <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">Google</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item ms-auto">
+                        <a class="nav-link" aria-current="page" href="index.html">Search</a>
+                    </li>
+                    <li class="nav-item ms-auto">
+                        <a class="nav-link" href="images.html">Image Search</a>
+                    </li>
+                    <li class="nav-item ms-auto">
+                        <a class="nav-link" href="advanced-search.html">Advanced Search</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
 </body>
 </html>
