--- a/advanced-search.html
+++ b/advanced-search.html
@@ -32,6 +32,58 @@
             </div>
         </div>
     </nav>
+    <div class="container">
+        <h5 class="section-title">Advanced Search</h5>
+        <form action="https://www.google.com/search">
+            <div class="form-section">
+                <h6>Find pages with...</h6>
+                <div class="row mb-3">
+                    <label for="all_words" class="col-sm-3 col-form-label">all these words:</label>
+                    <div class="col-sm-5">
+                        <input type="text" class="form-control" name="as_q" id="all_words">
+                    </div>
+                    <div class="col-sm-4">
+                        <p class="small">Type the important words: <code>tricolor rat terrier</code></p>
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <label for="exact_words" class="col-sm-3 col-form-label">this exact word or phrase:</label>
+                    <div class="col-sm-5">
+                        <input type="text" class="form-control" name="as_epq" id="exact_words">
+                    </div>
+                    <div class="col-sm-4">
+                        <p class="small">Put exact words in quotes: <code>"rat terrier"</code></p>
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <label for="any_words" class="col-sm-3 col-form-label">any of these words:</label>
+                    <div class="col-sm-5">
+                        <input type="text" class="form-control" name="as_oq" id="any_words">
+                    </div>
+                    <div class="col-sm-4">
+                        <p class="small">Type OR between all the words you want: <code>miniature OR standard</code></p>
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <label for="none_words" class="col-sm-3 col-form-label">none of these words:</label>
+                    <div class="col-sm-5">
+                        <input type="text" class="form-control" name="as_eq" id="none_words">
+                    </div>
+                    <div class="col-sm-4">
+                        <p class="small">Put a minus sign just before words that you don't want: <code>-rodent, -"Jack Russell"</code></p>
+                    </div>
+                </div>
+                
+                <div class="row mb-3">
+                    <div class="col-sm-8 offset-sm-3">
+                        <button type="submit" class="btn btn-advanced-search">Advanced Search</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
