--- a/advanced-search.html
+++ b/advanced-search.html
@@ -7,7 +7,23 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <style>
+        body {
+            padding-top: 70px;
+        }
+        .section-title {
+            color: red;
+        }
+        .form-section {
+            margin-bottom: 20px;
+        }
+        .btn-advanced-search {
+            background-color: #4285F4;
+            color: white;
+            float: right;
+        }
+    </style>
 </head>
 <body>
     <nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light">
