Edit navigation link

--- a/advanced-search.html
+++ b/advanced-search.html
@@ -39,7 +39,7 @@
                         <a class="nav-link" aria-current="page" href="index.html">Search</a>
                     </li>
                     <li class="nav-item ms-auto">
-                        <a class="nav-link" href="images.html">Image Search</a>
+                        <a class="nav-link" href="image.html">Image Search</a>
                     </li>
                     <li class="nav-item ms-auto">
                         <a class="nav-link" href="advanced-search.html">Advanced Search</a>
