Updated index.html navigation link

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                         <a class="nav-link" style="color: black;"  aria-current="page" href="index.html">Search</a>
                     </li>
                     <li class="nav-item ms-auto">
-                        <a class="nav-link" style="color: black;" href="images.html">Image Searches</a>
+                        <a class="nav-link" style="color: black;" href="image.html">Image Searches</a>
                     </li>
                     <li class="nav-item ms-auto">
-                        <a class="nav-link" style="color: black;" href="advanced.html">Advanced Search</a>
+                        <a class="nav-link" style="color: black;" href="advanced-search.html">Advanced Search</a>
                     </li>
                 </ul>
             </div>
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center my-3">
-                <button type="submit" form="searchbar" formaction="https://google.com/search" class="btn mx-3"
+                <button type="submit" form="searchbar" formaction="index.html" class="btn mx-3"
                     style="background-color: #f8f9fa;" role="button">Google Search</button>
                 <button type="submit" form="searchbar" name="btnI" class="btn mx-3" style="background-color: #f8f9fa;"
                     role="button">I'm feeling lucky</button>
