Update the link for advanced search

--- a/image.html
+++ b/image.html
@@ -206,7 +206,7 @@
                         <a class="nav-link dropdown-toggle" href="#" id="settingsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Settings</a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="settingsDropdown">
                             <li><a class="dropdown-item" href="https://www.google.com/preferences">Search settings</a></li>
-                            <li><a class="dropdown-item" href="advanced.html">Advanced search</a></li>
+                            <li><a class="dropdown-item" href="advanced-search.html">Advanced search</a></li>
                             <li><a class="dropdown-item" href="https://myactivity.google.com/product/search">Search history</a></li>
                             <li><a class="dropdown-item" href="https://support.google.com/websearch/">Search help</a></li>
                             <li><a class="dropdown-item" href="#">Send feedback</a></li>
