--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="container d-flex align-items-center vh-100" id="cont">
         <div class="container mt-5">
             <div class="d-flex p-2 justify-content-center">
-                <img src="./img/Google-Emblem-removebg-preview.png" alt="" width="400">
+                <img src="Google-Emblem-removebg-preview.png" alt="" width="400">
             </div>
             <div class="d-flex justify-content-center">
                 <div class="col-md-6 justify-content-center">
