--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <style>
         #cont {
             position: absolute;
-            top: 50%;
+            top: 60%;
             right: 0;
-            transform: translateY(-70%);
+            left: 0;
         }
 
         #cont input {
@@ -114,5 +114,3 @@
 </body>
 
 </html>
-
-
