--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             top: 60%;
             right: 0;
             left: 0;
+            transform: translateY(-50%);
         }
 
         #cont input {
