--- a/image.html
+++ b/image.html
@@ -62,10 +62,9 @@
             position: fixed;
             bottom: 60px;
             width: 100%;
-            height: 5%;
             background-color: #f8f9fa;
             margin-bottom: -17px;
-            
+
         }
         .navbar-main {
             position: fixed;
@@ -73,7 +72,6 @@
             width: 100%;
             height: 5%;
             background-color: #f8f9fa;
-            margin-bottom: -6px;
             border-top: 1px solid #DADADA;
         }
         .navbar .nav-link {
@@ -137,6 +135,16 @@
         body.dark-theme .dropdown-item:active {
             background-color: #333 !important; /* Gray background on focus and active state */
         }
+        .form{
+            position: relative;
+        }
+        .form i{
+            position: absolute;
+            margin: 18px 20px;
+        }
+        .form input{
+           padding: 20px;
+        }
     </style>
 </head>
 
@@ -155,6 +163,7 @@
                     <div class="form">
                         <form class="d-flex" action="https://images.google.com/search" autocomplete="off"
                             id="searchbar">
+                            <i class="fa-solid fa-magnifying-glass"></i>
                             <input type="text" name="q" id="searchterm" class="form-control form-input"
                                 placeholder="Search">
                             <input type="hidden" name="tbm" value="isch" id="searchterm">
